# gtest_demo

./: .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh
cmake/: cc_gflags.cmake  cc_gtest.cmake  common.cmake
include/: foo.h  func.h
src/: CMakeLists.txt  foo.cc  func.cc
test/: CMakeLists.txt  foo_test.cc  gflags_test.cc
test/test_main/: test_main.cc
test/ut/: foo_test.cc  func_test.cc  gflags_test.cc
